tests/neg-custom-args/explain/i16888.scala
def test = summon[scala.quoted.Quotes] // error
